2010-01-29  Anthony Green  <green@moxielogic.com>

	* build.xml: Run scripts/check-submodules before every build.
	* scripts/check-submodules: New file.

2010-01-04  Anthony Green  <green@moxielogic.com>

	* scripts/daily-build.sh: New file.

2009-12-05  Anthony Green  <green@moxielogic.com>

	* build.xml: Set path for make install of binutils so we pick up
	dtc.
	* gcc/cloog-ppl, gcc/gmp, gcc/mpfr, gcc/ppl: Deleted.

2009-10-13  Anthony Green  <green@moxielogic.com>

	* build.xml: Don't --enable-build-with-cxx for GCC.  New LTO
	feature does not build otherwise.

2009-09-15  Anthony Green  <green@moxielogic.com>

	* build.xml: Put dtc on path for sim build.
	Fix busybox and initfs builds.

2009-09-10  Anthony Green  <green@moxielogic.com>

	* build.xml: Fix initramfs reference before building kernel.

2009-08-02  Anthony Green  <green@moxielogic.com>

	* dtc/*: New files.
	* build.xml: Clean and build dtc directory.

2009-07-28  Anthony Green  <green@moxielogic.com>

	* elf2flt, uClibc: New directories.
	* build.xml: Build elf2flt, uClibc and uClinux tools.

2009-07-27  Anthony Green  <green@moxielogic.com>

	* build.xml: Fix uClinux build task.

2009-07-26  Anthony Green  <green@moxielogic.com>

	* build.xml: Add linux-2.6 to clean target.

2009-07-23  Anthony Green  <green@moxielogic.com>

	* linux-2.6/*: New files.
	* build.xml: Build Linux kernel.

2009-07-13  Anthony Green  <green@moxielogic.com>

	* scripts/dejagnu/moxie-sim.exp: Tweak gdb test options (can
	reverse debug, for instance).

2009-06-26  Anthony Green  <green@moxielogic.com>

	* build.xml: Build GCC with g++.

2009-06-22  Anthony Green  <green@moxielogic.com>

        * moxie/rtl/verilog/MoxieCore.v: New file.
        * moxie/rtl/verilog/iprinter.v: New file.
        * moxie/rtl/verilog/moxie.v: New file.
        * moxie/rtl/verilog/moxiesoc.v: New file.
        * moxie/rtl/verilog/test.v: New file.
        * moxie/rtl/verilog/testsuite/config/default.exp: New file.