@@ -1,3 +1,4 @@
+typescript
 root
 build
 *~
